# advanced_dependency_providers

./: Cargo.toml  README.md
allow-multiple-versions/: Cargo.toml
allow-multiple-versions/src/: index.rs  lib.rs  multiple_versions.rs
optional-deps/: Cargo.toml
optional-deps/src/: index.rs  lib.rs  optional_deps.rs
public-private/: Cargo.toml
public-private/src/: index.rs  lib.rs  public_private.rs
