[package]
name = "advanced_dependency_providers"
version = "0.1.0"
authors = [
    "Eh2406 <YeomanYaacov@gmail.com>",
    "Matthieu Pizenberg <matthieu.pizenberg@gmail.com>",
]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pubgrub = "0.2.1"
